--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/nav_TietKiem"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="Setting" />
+            android:title="Tiết kiệm" />
 
         <item
-            android:id="@+id/nav_help"
+            android:id="@+id/nav_SuKien"
             android:icon="@drawable/ic_help_black_24dp"
-            android:title="Help" />
+            android:title="Sự kiện" />
     </group>
 </menu>
