--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,11 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-         <!--Layout to contain contents of main body of screen (drawer will slide over this)-->
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -26,8 +25,24 @@
                 android:background="#35A5FA"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                 app:titleTextColor="#FFFFFF" />
+            <android.support.design.widget.TabLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                style="@style/CustomTabLayout"
+                android:id="@+id/tablayout_header"
+                android:layout_gravity="left"
+                android:background="@color/colorPrimary"
+                app:tabGravity="fill"
+                app:tabMode="fixed">
 
-        </FrameLayout>
+            </android.support.design.widget.TabLayout>
+        </android.support.design.widget.AppBarLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        </android.support.v4.view.ViewPager>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabAdd"
