--- a/app/src/main/res/layout/fragment_this_month.xml
+++ b/app/src/main/res/layout/fragment_this_month.xml
@@ -7,8 +7,11 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="FragmentTwo"
-        android:gravity="center_vertical|center_horizontal"/>
-
+        android:layout_height="wrap_content"
+        android:text="FragmentTwo" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnToast"
+        android:text="Test"/>
 </LinearLayout>
