Thêm activity, custom lại layout listview, update lần 1

--- a/app/src/main/res/layout/truong_activity_them_ke_hoach.xml
+++ b/app/src/main/res/layout/truong_activity_them_ke_hoach.xml
@@ -29,7 +29,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="Tên kế hoạch"
-            android:inputType="textPersonName" />
+            android:inputType="textCapWords" />
     </LinearLayout>
 
     <TextView
