--- a/app/src/main/res/layout/hoang_item_tietkiem.xml
+++ b/app/src/main/res/layout/hoang_item_tietkiem.xml
@@ -41,14 +41,14 @@
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="61dp"
+                    android:layout_width="116dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="Tiết Kiệm" />
+                    android:text="Còn Tiết Kiệm" />
 
                 <TextView
-                    android:id="@+id/txtSoTienDaChi"
-                    android:layout_width="47dp"
+                    android:id="@+id/txtSoTienConThieu"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
@@ -56,13 +56,31 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:text=" VNĐ" />
+                    android:text="    VNĐ" />
             </LinearLayout>
 
         </LinearLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnSuaTietKiem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sửa" />
+
+        <Button
+            android:id="@+id/btnXoaTietKiem"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Xóa" />
     </LinearLayout>
 
     <TextView
