--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="transparentBackgroundLogin">#668A97E4</color>
     <color name="textLoginColor">#FFFFFF</color>
     <color name="backgroundLoginGoogle">#46B3E6</color>
-    <color name="cardFragmentToolbarBackground">#5314d0</color>
+    <color name="cardFragmentToolbarBackground">#5314D0</color>
+    <color name="colorbackgroundActionbar">#E5E4E5</color>
 
 </resources>
