minh add drawble-hdpi,mdpi

--- a/app/src/main/res/layout/minh_khoanthu_fragment.xml
+++ b/app/src/main/res/layout/minh_khoanthu_fragment.xml
@@ -38,16 +38,17 @@
 
         <ImageView
             android:id="@+id/imgTienLai"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="15dp"
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/tienlai" />
 
         <TextView
             android:id="@+id/txtTienLai"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center|left"
             android:text="Tiền lãi"
             android:textSize="16sp" />
     </LinearLayout>
