--- a/app/src/main/res/layout/truong_activity_mainkehoach.xml
+++ b/app/src/main/res/layout/truong_activity_mainkehoach.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorbackgroundListView"
     android:orientation="vertical"
     tools:context=".MainTruong.MainKeHoach">
 
@@ -20,7 +21,9 @@
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@color/colorFloatButton"
+                android:scrollbars="horizontal" />
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
