--- a/app/src/main/res/layout/truong_item_kehoach.xml
+++ b/app/src/main/res/layout/truong_item_kehoach.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_google_signin_btn_text_dark_default"
+    android:background="@color/colorbackgroundListView"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/colorbackgroundBack"
+        android:layout_height="96dp"
+        android:background="@color/colorLayoutTaskbar"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:layout_margin="16dp"
             app:srcCompat="@drawable/plane1" />
 
         <LinearLayout
@@ -27,22 +28,20 @@
                 android:id="@+id/txtkeHoach"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="61dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:text="Đã chi" />
 
                 <TextView
@@ -57,6 +56,7 @@
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
                     android:text=" VNĐ" />
             </LinearLayout>
 
@@ -68,6 +68,6 @@
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="15dp"
-        android:background="@color/colorbackground" />
+        android:background="@color/colorbackgroundListView" />
 
 </LinearLayout>
