--- a/app/src/main/res/layout/activity_doc.xml
+++ b/app/src/main/res/layout/activity_doc.xml
@@ -16,12 +16,12 @@
 
         <ImageView
             android:id="@+id/imgViewFinish"
-            android:layout_width="10dp"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
-            android:layout_weight="1"
             android:onClick="xuLyThoat"
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/minh_finish" />
 
         <LinearLayout
@@ -37,36 +37,35 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:onClick="xuLyLuu"
                 android:id="@+id/imgViewSave"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_marginTop="17dp"
-                android:layout_weight="1"
+                android:onClick="xuLyLuu"
+                android:scaleType="fitXY"
                 app:srcCompat="@drawable/minh_save" />
 
             <ImageView
                 android:id="@+id/imgViewEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="15dp"
-                android:layout_weight="1"
                 android:onClick="xuLySua"
-                android:scaleType="center"
+                android:scaleType="fitXY"
                 app:srcCompat="@drawable/minh_edit" />
 
             <ImageView
                 android:id="@+id/imgViewDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="15dp"
-                android:layout_weight="1"
                 android:onClick="hienThiAlertLogTruocKhiXoa"
+                android:scaleType="fitXY"
                 app:srcCompat="@drawable/minh_delete" />
         </LinearLayout>
 
@@ -81,19 +80,21 @@
 
         <ImageView
             android:id="@+id/imgViewEditNhom"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginRight="15dp"
             android:focusable="false"
             app:srcCompat="@drawable/question2" />
 
         <EditText
             android:id="@+id/edtEditNhom"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:focusable="false"
             android:onClick="xuLyChonNhom"
             android:text="Nhóm"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
@@ -109,20 +110,22 @@
         <LinearLayout
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
+            android:layout_marginRight="10dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="52dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
                 android:paddingLeft="5dp"
+                android:scaleType="fitXY"
                 app:srcCompat="@drawable/minh_dollar" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/edtEditSoTien"
-            android:layout_width="wrap_content"
+            android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -135,7 +138,7 @@
 
         <TextView
             android:id="@+id/textView8"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|left"
@@ -152,14 +155,14 @@
 
         <ImageView
             android:id="@+id/imageView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/calendar_picture" />
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/minh_calendar" />
 
         <TextView
             android:id="@+id/txtEditNgay"
@@ -179,14 +182,13 @@
 
         <ImageView
             android:id="@+id/imageView14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/wallet_picture" />
+            app:srcCompat="@drawable/minh_wallet" />
 
         <TextView
             android:id="@+id/txtEditVi"
