--- a/app/src/main/res/layout/minh_custom_listview.xml
+++ b/app/src/main/res/layout/minh_custom_listview.xml
@@ -82,18 +82,18 @@
 
         <ImageView
             android:id="@+id/imgViewListView"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="13dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="1"
             app:srcCompat="@drawable/question2" />
 
         <LinearLayout
             android:layout_width="290dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -101,6 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
