--- a/app/src/main/res/layout/minh_khoanchi_fragment.xml
+++ b/app/src/main/res/layout/minh_khoanchi_fragment.xml
@@ -7,23 +7,24 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:onClick="xuLyLuuKhoanChi">
+        android:onClick="xuLyLuuKhoanChi"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imgRutTien"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             app:srcCompat="@drawable/ruttien" />
 
         <TextView
             android:id="@+id/txtRutTien"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="left|center"
             android:text="Rút tiền"
             android:textSize="16sp" />
     </LinearLayout>
