--- a/app/src/main/res/layout/minh_khoanchi_fragment.xml
+++ b/app/src/main/res/layout/minh_khoanchi_fragment.xml
@@ -1,32 +1,424 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:onClick="xuLyLuuKhoanChi"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imgRutTien"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            app:srcCompat="@drawable/ruttien" />
-
-        <TextView
-            android:id="@+id/txtRutTien"
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center"
-            android:text="Rút tiền"
-            android:textSize="16sp" />
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgRutTien"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/ruttien" />
+
+            <TextView
+                android:id="@+id/txtRutTien"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_withdraw"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgHeart"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_heart96" />
+
+            <TextView
+                android:id="@+id/txtHeart"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_friend_n_love"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgInsurrance"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_insurrance96" />
+
+            <TextView
+                android:id="@+id/txtInsurrance"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_insurance"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgFee"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_fee" />
+
+            <TextView
+                android:id="@+id/txtFee"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_fee"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgTransportation"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_transportation" />
+
+            <TextView
+                android:id="@+id/txtTransportation"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_transport"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgHome"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_home96" />
+
+            <TextView
+                android:id="@+id/txtHome"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_home"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgTravel"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_travel96" />
+
+            <TextView
+                android:id="@+id/txtTravel"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_travel"
+                android:textSize="16sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgEducation"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_education96" />
+
+            <TextView
+                android:id="@+id/txtEducation"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_education"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgEntertainment"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_entertainment96" />
+
+            <TextView
+                android:id="@+id/txtEntertainment"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_entertainment"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgBill"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_bill128" />
+
+            <TextView
+                android:id="@+id/txtBill"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_bill"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgBusiness"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_business96" />
+
+            <TextView
+                android:id="@+id/txtBusiness"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_business"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgShopping"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_shopping96" />
+
+            <TextView
+                android:id="@+id/txtShopping"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_shopping"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgDonate"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_donate96" />
+
+            <TextView
+                android:id="@+id/txtDonate"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_gift"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgHealth"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_health96" />
+
+            <TextView
+                android:id="@+id/txtHealth"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_health"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgEating"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_eat96" />
+
+            <TextView
+                android:id="@+id/txtEating"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_eating"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgInvest"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_invest96" />
+
+            <TextView
+                android:id="@+id/txtInvest"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_invest"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:onClick="xuLyLuuKhoanChi"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgOtherOut"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/minh_gift96" />
+
+            <TextView
+                android:id="@+id/txtOtherOut"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:text="@string/ts_outcome_other"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
-</LinearLayout>
+
+</ScrollView>
